--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
   <title>My First Project</title>
  </head>
  <body>
+   <img src="https://i.imgur.com/0KrW4QQ.jpg" alt="slightly out of focus picture of Nathan" height="200" weight="auto">
 <h1>Work</h1>
   <p>
   I worked as a product manager for a esports start up. working on their ecommerce site and managing their fulfillment and
@@ -21,8 +22,6 @@ out with friends and share something delicious!
 After this class, I want to work as a UX designer that can also create functional code. I'd love to work for a company
 that's trying to make the world a better place! Mozilla, if you're reading this call me.
 </p>
-<input type="text">
-<button>Click Me</button>
 
  </body>
  </html>
