added style section to index page

--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Project</title>
+  <style>
+    h1 {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 18pt;
+      color: cornflowerblue;
+    }
+
+    p {
+      font-family: monospace;
+    }
+
+    .profile {
+      height: 400px;
+      width: auto;
+      align-content: center;
+    }
+  </style>
  </head>
  <body>
-   <img src="https://i.imgur.com/0KrW4QQ.jpg" alt="slightly out of focus picture of Nathan" height="200" weight="auto">
+   <img class="profile" src="http://i.imgur.com/0KrW4QQ.jpg" alt="slightly out of focus picture of Nathan">
 <h1>Work</h1>
   <p>
   I worked as a product manager for a esports start up. working on their ecommerce site and managing their fulfillment and
