--- a/Index.html
+++ b/Index.html
@@ -3,42 +3,41 @@
  <head>
   <meta charset="UTF8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>My First Project</title>
-  <style>
-    h1 {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 18pt;
-      color: cornflowerblue;
-    }
-
-    p {
-      font-family: monospace;
-    }
-
-    .profile {
-      height: 400px;
-      width: auto;
-      align-content: center;
-    }
-  </style>
  </head>
+
+<header>
+  <nav>
+    <a class="nav-button" href="./Index.html">homepage</a>
+    <a class="nav-button" href="./Contact.html">contact me</a>
+  </nav>
+</header>
+
  <body>
-   <img class="profile" src="http://i.imgur.com/0KrW4QQ.jpg" alt="slightly out of focus picture of Nathan">
-<h1>Work</h1>
+   <div class="hero"></div>
+<div class="hBlock">
+   <h1>Work</h1>
   <p>
   I worked as a product manager for a esports start up. working on their ecommerce site and managing their fulfillment and
   inventory operations. I recently quit so I could learn web development!
   </p>
+</div>
+<div class="vBlock">
+  <h1>Career Goals</h1>
+  <p>
+    After this class, I want to work as a UX designer that can also create functional code. I'd love to work for a
+    company
+    that's trying to make the world a better place! Mozilla, if you're reading this call me.
+  </p>
+</div>
+<div class="hBlock">
 <h1>Hobbies</h1>
 <p>
 I really enjoy cooking, reading, gardening, and playing video games. Cooking especially as it gives me an excuse to hang
 out with friends and share something delicious!
 </p>
-<h1>Career Goals</h1>
-<p>
-After this class, I want to work as a UX designer that can also create functional code. I'd love to work for a company
-that's trying to make the world a better place! Mozilla, if you're reading this call me.
-</p>
+</div>
 
  </body>
  </html>
